--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -37,19 +37,19 @@ nav:
   # Menu
   # 菜单
   menu:
-    # 首页: / # name: link
-    # 文库: # name
-    #   全部文章: /archives/ || fas fa-folder-closed # item name: link || icon
-    #   全部分类: /categories/ || fas fa-clone
-    #   全部标签: /tags/ || fas fa-tags
-    # 友链:
-    #   朋友圈: /moments/ || fas fa-wifi
-    #   友情链接: /links/ || fas fa-user-group
-    #   宝藏博主: javascript:travelling() || fas fa-gift
-    # 关于:
-    #   我的装备: /equipment/ || fas fa-laptop
-    #   在线工具: /tlink/ || fas fa-toolbox
-    #   音乐馆: /music/ || fas fa-music
+    首页: / # name: link
+    文库: # name
+      全部文章: /archives/ || fas fa-folder-closed # item name: link || icon
+      全部分类: /categories/ || fas fa-clone
+      全部标签: /tags/ || fas fa-tags
+    友链:
+      朋友圈: /moments/ || fas fa-wifi
+      友情链接: /links/ || fas fa-user-group
+      宝藏博主: javascript:travelling() || fas fa-gift
+    关于:
+      我的装备: /equipment/ || fas fa-laptop
+      在线工具: /tlink/ || fas fa-toolbox
+      音乐馆: /music/ || fas fa-music
 
   # Right button
   # 右侧按钮
@@ -589,7 +589,7 @@ meting_api: "https://meting.qjqq.cn/?server=:server&type=:type&id=:id&auth=:auth
 capsule:
   enable: enable
   # 歌单 ID / 单曲 ID
-  id: 5144842535
+  id: 607483838
   # 服务商：netease / qq / xiami / kugou / baidu
   server: netease
   # 类型：playlist / song
