--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -224,7 +224,7 @@ page:
     # Default image when no cover is set
     # 未设置封面时的默认图片
     cover:
-      # - /img/default.png # 默认图片 / default cover
+      - /img/default.png
 # --------------------------- end ---------------------------
 
 # --------------------------- start ---------------------------
